# CYRP

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: cyrp_config.json
config/mosquitto/: mosquitto.conf
config/nginx/: nginx.conf
cyrp/: __init__.py  cli.py  launcher.py
cyrp/agents/: __init__.py  base_agent.py  control_agent.py  coordinator_agent.py  multi_agent_system.py  perception_agent.py  safety_agent.py  scenario_agent.py
cyrp/alarm/: __init__.py  alarm_manager.py
cyrp/analytics/: __init__.py  data_analytics.py
cyrp/api/: __init__.py  monitoring_endpoints.py  rest_api.py
cyrp/asset/: __init__.py  asset_manager.py
cyrp/assimilation/: __init__.py  data_assimilation.py
cyrp/backup/: __init__.py  backup_manager.py
cyrp/communication/: __init__.py  protocols.py  websocket_server.py
cyrp/config/: __init__.py  config_manager.py  config_templates.py
cyrp/control/: __init__.py  adaptive_mpc.py  adaptive_pid.py  hdmpc.py  mpc_controller.py  pid_controller.py  safety_interlocks.py  scenario_mpc_linker.py
cyrp/core/: __init__.py  high_fidelity_model.py  hydraulic_model.py  parameters.py  physical_system.py  (+2 more)
scripts/: init-db.sql
src/: app.py  autonomy.py  config.py  control.py  model.py  perception.py  scenarios.py  sensors.py
tests/: __init__.py  conftest.py  test_alarm.py  test_cli.py  test_communication.py  test_config.py  test_config_templates.py  test_e2e_integration.py  test_hil_comprehensive.py  test_hil_framework.py  test_hydraulic_model.py  test_integration.py  test_integration_layer.py  test_mpc_controller.py  test_multi_agent.py  test_new_modules.py  test_security.py
verification/: test_ui.py
(+81 files in other folders)
