[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyrp"
version = "1.0.0"
description = "南水北调中线穿黄工程全场景自主运行在环测试与多智能体系统平台"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "CYRP Development Team"}
]
keywords = [
    "water-transfer",
    "inverted-siphon",
    "mpc",
    "multi-agent-system",
    "digital-twin",
    "hil-testing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
]
visualization = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/cyrp/cyrp"
Documentation = "https://cyrp.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["cyrp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
